# dungeon_generator

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  GEMINI.md  LICENSE  README.md  example_wfc.gd
.cache/clangd/index/: DungeonBuilder.cpp.D4E96F7481E92C67.idx  DungeonBuilder.h.69861EC4507EC0D2.idx  aabb.cpp.B3D6A467D0663561.idx  aabb.hpp.ACD7C165246DC954.idx  array2D.hpp.0A11C83507978B78.idx  array2D.hpp.40041FE3542DEA23.idx  array3D.hpp.1F707C3645BECF42.idx  array3D.hpp.EBAD54AF8026DBF2.idx  array_helpers.hpp.4DF0B0C3BF11CC61.idx  basis.cpp.E4968C314863797D.idx  basis.hpp.CAC4AEFFE4D99EEA.idx  binder_common.hpp.75ED7243573FC5AE.idx  bsp_godot.cpp.3A41C65C315D3318.idx  bsp_godot.h.045018D030A8C5E8.idx  callable_custom.cpp.AE4046AAB5EFC850.idx  callable_custom.hpp.6C5FC0CFD2E4DCD5.idx  callable_method_pointer.cpp.4CCBEE7CBC939E8F.idx  callable_method_pointer.hpp.2790AD54B784CF1B.idx  char_range.inc.hpp.5B764845D176CD31.idx  char_string.cpp.B6DD8E067F784189.idx  char_string.hpp.7B13DE4EA90229BD.idx  char_utils.hpp.E7B0E5C5B124ADDF.idx  class_db.cpp.42D173F683B09796.idx  class_db.hpp.59A1FDE83B91754B.idx  color.cpp.3C172824A8FDB4DC.idx  color.hpp.DE57D73D543AABB7.idx  color_names.inc.hpp.49BD6A149E241949.idx  cowdata.hpp.9202803D62F66780.idx  defs.hpp.79F847C40857758C.idx  direction.hpp.728A03EC52811F55.idx  direction.hpp.8961C2C0CBDC01E5.idx  editor_plugin_registration.cpp.BD18A605ABA2CEC4.idx  editor_plugin_registration.hpp.AEE2A8D477034B45.idx  error_macros.cpp.F4213BC6E9D32F17.idx  error_macros.hpp.193A8CD366FF2B71.idx  gdextension_interface.h.7022A2E6AFA0E603.idx  gdwfc.cpp.A5B18B7F3D7C37A1.idx  gdwfc.h.FACD59AA21D371F5.idx  gdwfc_v2.cpp.4E64F93033058607.idx  gdwfc_v2.h.47D4B3759CEB37E2.idx  (+82 more)
.github/workflows/: build.yml
addons/dungeon_generator/: DungeonPreview.gd  README.md  dungeon_generator.gdextension  plugin.cfg  plugin.gd
addons/dungeon_generator/docs/: BSPResult.md  BUILD.md  HybridDungeonGenerator.md  HybridResult.md  OverlappingWFC.md
addons/dungeon_generator/examples/: README.md  walker_preview_example.gd
docs/: BSPDungeonGenerator.md  DungeonPreview.md  OverlappingWFC.md  WalkerDungeonGenerator.md
fast-wfc/: .gitignore  CMakeLists.txt  LICENSE  README.md
fast-wfc/example/: CMakeLists.txt  samples.xml
fast-wfc/example/samples/Castle/: data.xml
fast-wfc/example/samples/Circles/: data.xml
fast-wfc/example/samples/Circuit/: data.xml
fast-wfc/example/samples/Knots/: data.xml
fast-wfc/example/samples/Rooms/: data.xml
fast-wfc/example/src/include/: color.hpp  image.hpp  rapidxml_utils.hpp  utils.hpp
fast-wfc/example/src/lib/: main.cpp
fast-wfc/src/include/: direction.hpp  overlapping_wfc.hpp  propagator.hpp  wfc.hpp
fast-wfc/src/include/utils/: array2D.hpp
fast-wfc/src/lib/: propagator.cpp
godot-cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  generate_bindings.vcxproj  generate_bindings.vcxproj.filters  godot-cpp.sln  godot-cpp.vcxproj  godot-cpp.vcxproj.filters
hybrid/: DungeonBuilder.cpp  DungeonBuilder.h
src/: bsp_godot.cpp  bsp_godot.h  gdwfc.cpp  gdwfc.h  gdwfc_v2.cpp  gdwfc_v2.h  hybrid_godot.cpp  hybrid_godot.h  overlapping_wfc_godot.cpp  overlapping_wfc_godot.h  register_types.cpp  register_types.h  walker.cpp  walker.h
tiling-wfc/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  GODOT_INTEGRATION.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  QUICK_START.md  README.md  tiling_wfc.sln  tiling_wfc.vcxproj  tiling_wfc_static.vcxproj  tiling_wfc_static.vcxproj.filters
tiling-wfc/cmake/: TilingWFCConfig.cmake.in
tiling-wfc/example/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  simple_example.cpp  simple_example.vcxproj  simple_example.vcxproj.filters  tiling_wfc_example.sln
tiling-wfc/include/: tiling_wfc.hpp  wave.hpp
tiling-wfc/include/utils/: array3D.hpp
tiling-wfc/src/: wave.cpp  wfc.cpp
